<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_finger_270x480"
    android:padding="10dp"
    android:scrollbars="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="7sp"
        android:orientation="vertical">
        <TextView
            style="@style/MyQuestions"
            android:text="@string/asking_for_name" />
        <EditText
            android:id="@+id/asking_name_edit_text"
            style="@style/MyControls"
            android:hint="@string/asking_for_name_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColorHint="#FFF" />
        <TextView
            style="@style/MyQuestions"
            android:text="@string/a_overall_layout_question" />
        <RadioGroup
            android:id="@+id/a"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/a1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/a_overall_layout_answer_1" />
            <RadioButton
                android:id="@+id/a2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/a_overall_layout_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/b_question_types_question" />
        <CheckBox
            android:id="@+id/b1"
            style="@style/MyControls"
            android:buttonTint="#FFF"
            android:onClick="checkBoxClicked"
            android:text="@string/b_question_types_answer_1" />
        <CheckBox
            android:id="@+id/b2"
            style="@style/MyControls"
            android:buttonTint="#FFF"
            android:onClick="checkBoxClicked"
            android:text="@string/b_question_types_answer_2" />
        <CheckBox
            android:id="@+id/b3"
            style="@style/MyControls"
            android:buttonTint="#FFF"
            android:onClick="checkBoxClicked"
            android:text="@string/b_question_types_answer_3" />
        <CheckBox
            android:id="@+id/b4"
            style="@style/MyControls"
            android:buttonTint="#FFF"
            android:onClick="checkBoxClicked"
            android:text="@string/b_question_types_answer_4" />
        <TextView
            style="@style/MyQuestions"
            android:text="@string/c_submit_button_question" />
        <RadioGroup
            android:id="@+id/c"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/c1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/c_submit_button_answer_1" />
            <RadioButton
                android:id="@+id/c2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/c_submit_button_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/d_layout_best_practices_question" />
        <RadioGroup
            android:id="@+id/d"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/d1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/d_layout_best_practices_answer_1" />
            <RadioButton
                android:id="@+id/d2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/d_layout_best_practices_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/e_view_variety_question" />
        <CheckBox
            android:id="@+id/e1"
            style="@style/MyControls"
            android:buttonTint="#FFF"
            android:onClick="checkBoxClicked"
            android:text="@string/e_view_variety_answer_1" />
        <CheckBox
            android:id="@+id/e2"
            style="@style/MyControls"
            android:buttonTint="#FFF"
            android:onClick="checkBoxClicked"
            android:text="@string/e_view_variety_answer_2" />
        <CheckBox
            android:id="@+id/e3"
            style="@style/MyControls"
            android:buttonTint="#FFF"
            android:onClick="checkBoxClicked"
            android:text="@string/e_view_variety_answer_3" />
        <TextView
            style="@style/MyQuestions"
            android:text="@string/f_rotation_question" />
        <RadioGroup
            android:id="@+id/f"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/f1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/f_rotation_answer_1" />
            <RadioButton
                android:id="@+id/f2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/f_rotation_answer_2" />
            <RadioButton
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/f_rotation_answer_3" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/g_runtime_errors_question" />
        <RadioGroup
            android:id="@+id/g"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/g1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/g_runtime_errors_answer_1" />
            <RadioButton
                android:id="@+id/g2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/g_runtime_errors_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/h_question_answers_question" />
        <RadioGroup
            android:id="@+id/h"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/h1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/h_question_answers_answer_1" />
            <RadioButton
                android:id="@+id/h2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/h_question_answers_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/i_radio_button_implementation_question" />
        <RadioGroup
            android:id="@+id/i"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/i1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/i_radio_button_implementation_answer_1" />
            <RadioButton
                android:id="@+id/i2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/i_radio_button_implementation_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/j_control_statements_question" />
        <RadioGroup
            android:id="@+id/j"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/j1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/j_control_statements_answer_1" />
            <RadioButton
                android:id="@+id/j2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/j_control_statements_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/k_grading_button_question" />
        <RadioGroup
            android:id="@+id/k"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/k1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/k_grading_button_answer_1" />
            <RadioButton
                android:id="@+id/k2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/k_grading_button_answer_2" />
            <RadioButton
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/k_grading_button_answer_3" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/l_grading_logic_question" />
        <RadioGroup
            android:id="@+id/l"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/l1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/l_grading_logic_answer_1" />
            <RadioButton
                android:id="@+id/l2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/l_grading_logic_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/m_code_naming_conventions_question" />
        <RadioGroup
            android:id="@+id/m"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/m1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/m_code_naming_conventions_answer_1" />
            <RadioButton
                android:id="@+id/m2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/m_code_naming_conventions_answer_2" />
        </RadioGroup>
        <TextView
            style="@style/MyQuestions"
            android:text="@string/n_code_format_question" />
        <RadioGroup
            android:id="@+id/n"
            style="@style/MyControls">
            <RadioButton
                android:id="@+id/n1"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/n_code_format_answer_1" />
            <RadioButton
                android:id="@+id/n2"
                style="@style/MyControls"
                android:buttonTint="#FFF"
                android:onClick="radioClicked"
                android:text="@string/n_code_format_answer_2" />
        </RadioGroup>
        <Button
            style="@style/MyControls"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="submitButtonClicked"
            android:text="@string/score_button"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
